[gd_scene load_steps=11 format=3 uid="uid://cv1nid2tp2fg"]

[ext_resource type="PackedScene" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="PackedScene" path="res://Mob.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://bfgj2fb5lasix" path="res://sounds/gulp.ogg" id="4"]
[ext_resource type="PackedScene" path="res://HUD.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://bfpu0jttoj8u4" path="res://sounds/game_over.ogg" id="6"]
[ext_resource type="AudioStream" uid="uid://lpigap1bv3y0" path="res://sounds/spaghetti_menu.ogg" id="7"]
[ext_resource type="AudioStream" uid="uid://dkopqli6xufiy" path="res://sounds/italian_theme.ogg" id="8"]
[ext_resource type="PackedScene" path="res://Options.tscn" id="9"]
[ext_resource type="PackedScene" path="res://CerealMob.tscn" id="11"]

[node name="Main" type="Node2D"]
script = ExtResource("2")
mob_scene = ExtResource("3")
cereal_scene = ExtResource("11")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("1")]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(50, 360)

[node name="Gulp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")

[node name="Miss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")

[node name="HUD" parent="." instance=ExtResource("5")]

[node name="Options" parent="HUD" instance=ExtResource("9")]
layer = 2

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="caught_plate" from="Player" to="." method="_on_Player_caught_plate"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="cereal_time" from="HUD" to="." method="_on_HUD_cereal_time"]
[connection signal="show_options" from="HUD" to="." method="_on_HUD_show_options"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="back_to_main" from="HUD/Options" to="." method="_on_Options_back_to_main"]
[connection signal="change_difficulty" from="HUD/Options" to="." method="_on_Options_change_difficulty"]
[connection signal="change_sprite" from="HUD/Options" to="." method="_on_Options_change_sprite"]
[connection signal="toggle_SFX" from="HUD/Options" to="." method="_on_Options_toggle_SFX"]
[connection signal="toggle_music" from="HUD/Options" to="." method="_on_Options_toggle_music"]
